--- a/SpringWeb_Module3/src/main/resources/templates/index.html
+++ b/SpringWeb_Module3/src/main/resources/templates/index.html
@@ -79,13 +79,13 @@
           <ul class="menu menu_main">
             <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/index.html">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/genres">Жанры</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors">Авторы</a>
             </li>
           </ul>
         </nav>
@@ -636,13 +636,13 @@
           <ul class="menu menu_vt Footer-menu">
             <li class="menu-item"><a class="menu-link" href="/index.html">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/genres">Жанры</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors">Авторы</a>
             </li>
           </ul>
         </div>
