Задание 6.7 2.4 Книги по genres page - метод в сервайс который берет все genres и переводит их в GenreDto раскидывая в мапу в потом в обьект модифиицирую обьекты и вычисляет колиство книг   но лучше хранить колиство книг в базе в таблице genres потому что чтобы вычислить количество каждого жанра приходится запрашивать все книги жанра из БД чтобы   посчитать их количетсво - страница со slugs на которую можно перейти с любого жанра, причем в slugs вычисляются наследники докидываются в slugs и динамически подставляются в endpoint   и потом докидываются в таймлив для динамической навигации по выбранному жанру и наследниками   <li class="breadcrumbs-item" th:each="path,iter : ${pathVars}">     <a th:href="'/genres/' + ${#strings.listJoin(pathVars.subList(0, iter.index+1), '/')}"        th:text="${pathVars.get(iter.index)}"></a>   </li> - thymeleaf для genres на странице genres/index сделан через рекурсию фрагмент   фрагмент:   <div th:fragment="fragmentTag(node)" th:unless="${#lists.isEmpty(node.getChilds())}">   <div th:each="ch : ${node.getChilds()}">     <span>wtf</span>     <div th:replace="this :: fragmentTag(node=${ch})">     </div>   </div>  </div>  на странице  <div th:replace="fragments/tag_fragment.html :: fragmentTag(node=${genres})">  </div> - в genre entity сделал unique неск полей, иначе ексепшен при запроосе из service.findbySlug и находит два

--- a/src/main/resources/spring-frontend/fragments/book_card_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/book_card_fragment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
-<div class="Card-fragment" th:fragment="bookFragment">
+<div class="Card-fragment" th:class= "${class}" th:fragment="bookFragment(book, class)">
     <a class="Card-picture" href="/books/slug.html">
         <img th:src="${book.image}" src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
         <div class="Card-ribbon" th:if="${book.isBestseller == 1}">
