--- a/SpringWeb_Module7/src/main/resources/spring-frontend/fragments/book_card_fragment.html
+++ b/SpringWeb_Module7/src/main/resources/spring-frontend/fragments/book_card_fragment.html
@@ -14,7 +14,7 @@
     </a>
     <div class="Card-content">
         <strong class="Card-title">
-            <a th:text="${book.title}"
+            <a th:text="${book.title}" th:href="'/books/' + ${book.slug}"
                href="/books/slug.html">Техника
             </a></strong>
 <!--        <div class="Card-description" th:text="${book.author?.getName()}">Кондратенко Александр Петрович</div>-->
