--- a/src/main/resources/spring-frontend/fragments/book_card_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/book_card_fragment.html
@@ -18,7 +18,7 @@
                href="/books/slug.html">Техника
             </a></strong>
 <!--        <div class="Card-description" th:text="${book.author?.getName()}">Кондратенко Александр Петрович</div>-->
-        <div class="Card-description" th:text="${book.author != null ? book.author.getName() : 'no_author'}">Кондратенко Александр Петрович</div>
+        <div class="Card-description" th:text="${book.author != null ? book.toStringAuthors() : 'no_author'}">Кондратенко Александр Петрович</div>
         <div class="Card-cost">
             <span class="Card-priceOld" th:text="${book.price}">₽500.00</span>
             <span class="Card-price" th:text="${book.price - book.discount}">₽390.00</span>
