--- a/src/main/resources/spring-frontend/fragments/book_card_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/book_card_fragment.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="Card-fragment" th:class= "${class}" th:fragment="bookFragment(book, class)">
-    <a class="Card-picture" href="/books/slug.html">
+    <a class="Card-picture" href="/books/slug.html" th:href="'/books/' + ${book.slug}">
         <img th:src="${book.image}" src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
         <div class="Card-ribbon" th:if="${book.isBestseller == 1}">
             <span class="Card-ribbonText">Бестселлер</span>
@@ -17,8 +17,7 @@
             <a th:text="${book.title}" th:href="'/books/' + ${book.slug}"
                href="/books/slug.html">Техника
             </a></strong>
-<!--        <div class="Card-description" th:text="${book.author?.getName()}">Кондратенко Александр Петрович</div>-->
-        <div class="Card-description" th:text="${book.author != null ? book.author.getName() : 'no_author'}">Кондратенко Александр Петрович</div>
+        <div class="Card-description" th:text="${book.author != null ? book.toStringAuthors() : 'no_author'}">Кондратенко Александр Петрович</div>
         <div class="Card-cost">
             <span class="Card-priceOld" th:text="${book.price}">₽500.00</span>
             <span class="Card-price" th:text="${book.price - book.discount}">₽390.00</span>
